# sibyl

./: .dockerignore  .gitignore  CLA.md  Dockerfile  GEMINI.md  README.md  index.yaml  pyproject.toml
.github/workflows/: build-and-publish-release.yml  build-and-publish.yml
charts/sibyl/: Chart.yaml  README.md  values.yaml
charts/sibyl/templates/: _helpers.tpl  clusterrole.yaml  clusterrolebinding.yaml  deployment.yaml  serviceaccount.yaml  slack-credentials-secet.yaml
charts/sibyl/tests/: clusterrole_test.yaml  clusterrolebinding_test.yaml  deployment_test.yaml  serviceaccount_test.yaml  slack-credentials-secret_test.yaml
docs/: sibyl-slack-manifest.yml
src/sibyl/: log_fetcher.py  main.py  settings.py
src/sibyl/event_watch/: event_watch.py  event_watch_thread.py
src/sibyl/health_check/: health_status.py  health_status_thread.py
src/sibyl/models/events/: k8_event.py  k8_event_involved_object.py  k8_event_metadata.py  k8_event_source.py
src/sibyl/notifications/: notifiable.py  slack_notifier.py
tests/: test_log_fetcher.py  test_main.py  test_settings.py
tests/event_watch/: test_event_watch.py  test_event_watch_thread.py
tests/health_check/: test_health_status.py  test_health_status_thread.py
tests/models/events/: test_k8_event.py  test_k8_event_involved_object.py  test_k8_event_metadata.py  test_k8_event_source.py
tests/notifications/: test_notifiable.py  test_slack_notifier.py
