[project]
name = "sibyl"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.2",
    "kubernetes>=34.1.0",
    "pydantic-settings>=2.12.0",
    "python-json-logger>=4.0.0",
    "slack-sdk>=3.39.0",
]

[project.scripts]
sibyl = "sibyl.main:main"

[tool.pytest.ini_options]
addopts = "--maxfail=1 --cov=sibyl --cov-report=term-missing --junitxml=reports/junit/unit.xml --cov-report=xml:reports/coverage/coverage.xml"
pythonpath = ["src"]

[build-system]
requires = ["uv_build>=0.9.11,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
]
